fix: page too tall with toc

--- a/docs/templates/assets/docs.css
+++ b/docs/templates/assets/docs.css
@@ -37,14 +37,8 @@ body>main>* {
     row-gap: 3rem
   }
 
-  body>main.has-table-of-contents {
-    grid-template-rows: auto auto 1fr;
-    grid-template-columns: 11rem 1fr;
-    grid-template-areas: "menu table-of-content" "menu body"
-  }
-
   body>main:has(aside#table-of-contents) {
-    grid-template-rows: auto 1fr 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-columns: 11rem 1fr;
     grid-template-areas: "menu table-of-content" "menu body"
   }
